# mf-bpr

./: .gitignore  M1.pptx  README.md
mf_bpr/: Cargo.toml  index.html
mf_bpr/src/: api.rs  data.rs  eval.rs  lib.rs  main.rs  model.rs
mf_bpr_py/: csv_format.py  data.py  main.py  model.py  requirements.txt
